# 2025hw

./: .gitignore
Assignment1/: Assignment1.cpp
Assignment2/: Assignment2.cpp
C++/Assignment2/: Assignment2.cpp  CMakeLists.txt
C++/Assignment3/Assignment3/: CMakeLists.txt  distributions.cpp  distributions.hpp  main.cpp
C++/Assignment4/: CMakeLists.txt  main.cpp  sortutils.cpp  sortutils.hpp
Int Systems/Assignment3/: cs5600_6600_f25_hw_3.py
Int Systems/hw2/hw2/: and_3_layer_ann.pck  and_4_layer_ann.pck  bool_3_layer_ann.pck  bool_4_layer_ann.pck  cs5600_6600_f25_hw_2.py  cs5600_6600_f25_hw_2_uts.py  not_3_layer_ann.pck  not_4_layer_ann.pck  or_3_layer_ann.pck  or_4_layer_ann.pck  xor_3_layer_ann.pck  xor_4_layer_ann.pck
Int Systems/hw4/: best_kmnist_lenet.pth
Int Systems/runs/: toy_epoch1.pt  toy_epoch10.pt  toy_epoch2.pt  toy_epoch3.pt  toy_epoch4.pt  toy_epoch5.pt  toy_epoch6.pt  toy_epoch7.pt  toy_epoch8.pt  toy_epoch9.pt
MAS/MASAssn2/: Applicants3.txt  Applicants4.txt  Employers3.txt  Employers4.txt  Graph.py  Stable.py
MASAssn1/: matches.py
hw1/: cs5600_6600_f25_hw_1.py
hw2/hw2/: cs5600_6600_f25_hw_2.py  cs5600_6600_f25_hw_2_data.py  cs5600_6600_f25_hw_2_uts.py
